<resources>
    <string name="app_name">PBBS</string>
    <string name="name">Name</string>
    <string name="limit">Limit</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="expire_date_optional">Expire Date (optional)</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="pay_day">Pay Day</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="first_launch_greeting">Hi!\nNice to meet you!</string>
    <string name="my_name_is">My name is…</string>
    <string name="budgetName">BudgetName</string>
    <string name="budgetInfo">BudgetInfo</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="cards">Cards</string>
    <string name="Continue">Continue</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="inactive">Inactive</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="mark_inactive">Mark Inactive</string>
    <string name="update_card_information">Update Card Information</string>
    <string name="change_user_name">Change name</string>
    <string name="view_accounts">View Accounts</string>
    <!--    <string name="authenticate">Authenticate</string>-->
</resources>